--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   , "dependencies": {
       "express": "2.5.1"
     , "jade": ">= 0.0.1"
+	, "express-validator": "0.1.3"
+	, "redis-url": "0.0.1"
   }
 }
